cmake_minimum_required(VERSION 3.10)
project(Volumetric)
cmake_policy(SET CMP0072  OLD)
find_package(OpenCV)
find_package(glm)
find_package(GLEW)
find_package(SDL2)
find_package(OpenGL)
add_executable(volumetric volumetric.cc tribox.c)
target_compile_features(volumetric PRIVATE cxx_std_20)
include_directories(${OpenCV_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
target_link_libraries(volumetric ${OpenCV_LIBS} ${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
